--- a/src/Components/Weather/Weather.module.scss
+++ b/src/Components/Weather/Weather.module.scss
@@ -86,15 +86,15 @@
             background-color: $clr-white;
             border: 0;
           }
-          button {
-            background-color: transparent;
-            border: 0;
-            background-color: $clr-004;
-            width: 30%;
-            font-size: 18px;
-            font-family: inherit;
-            color: inherit;
-          }
+          // button {
+          //   background-color: transparent;
+          //   border: 0;
+          //   background-color: $clr-004;
+          //   width: 30%;
+          //   font-size: 18px;
+          //   font-family: inherit;
+          //   color: inherit;
+          // }
         }
         .data {
           display: flex;
@@ -104,12 +104,6 @@
             font-size: 36px;
             font-weight: normal;
             margin-bottom: 26px;
-          }
-          i {
-            background-color: red;
-            width: 55px;
-            height: 55px;
-            border-radius: 50%;
           }
           h3 {
             margin-top: 30px;
@@ -138,7 +132,7 @@
           background-color: transparent;
           border: 0;
           background-color: $clr-004;
-          width: 30%;
+          width: 40%;
           font-size: 18px;
           font-family: inherit;
           color: inherit;
@@ -194,6 +188,76 @@
               width: 14px;
               height: 14px;
               margin: 0 0 0 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media screen and(max-width: 1200px) {
+    .slider {
+      .slide {
+        .contents {
+          max-width: calc(100% - 200px);
+        }
+      }
+    }
+  }
+  @media screen and(max-width: 640px) {
+    .Navigation {
+      right: 10px;
+    }
+    .slider {
+      .slide {
+        .contents {
+          max-width: calc(100% - 80px);
+          padding: 0;
+          .title {
+            font-size: 14px;
+          }
+          .subtitle {
+            font-size: 10px;
+          }
+          .form {
+            input {
+              padding: 10px 15px;
+              font-size: 16px;
+            }
+            button {
+              width: 70px;
+              padding: 10px 0;
+              font-size: 14px;
+            }
+          }
+          .data {
+            h2 {
+              font-size: 27px;
+            }
+            h3 {
+              font-size: 25px;
+            }
+            .temp {
+              font-size: 36px;
+            }
+            .tempRang {
+              font-size: 20px;
+            }
+            .state {
+              font-size: 14px;
+            }
+          }
+          button {
+            width: 100%;
+            max-width: 300px;
+          }
+        }
+      }
+      .dots {
+        li {
+          div {
+            span {
+              opacity: 0.3;
+              font-size: 10px;
             }
           }
         }
